Synchronization improvements, still not 100%, misc fixes to tags and workaround for WCM-656